fix: recommended extensions
Signed-off-by: skifli <121291719+skifli@users.noreply.github.com>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,8 @@
 {
     "recommendations": [
         "christian-kohler.path-intellisense",
+        "golang.go",
         "gruntfuggly.todo-tree",
-        "ms-python.python",
         "pkief.material-icon-theme",
         "zhuangtongfa.material-theme"
     ]
